---------------------------------------------------------------------------------------------------
Version: 1.2.12
Date: ?. 4. 2025
  Updates:
    - Code cleanup for Atomics recipes
  Fixes:
    - Fixed up Atomics recipe names
---------------------------------------------------------------------------------------------------
Version: 1.2.11
Date: 30. 3. 2025
  Fixes:
    - Fixed storage volume of all liquid storage tanks.
    - Fixed Atomics Trade recipe icon color for F7 ore.
  Changes:
    - Yuoki recipe for Vanilla Battery removed from recycling. This is to resolve the broken recycle process on Fulgora
    - Removed Nature, Techanic, Science, and Merchant Signs from recycling. This means all recipes that produce one of these signs as a byproduct also can not be recycled either.
    - Removed Reputation from recycling. This means all recipes that produce one of these signs as a byproduct also can not be recycled either.
    - Removed Unicomp from recycling.
  Additions:
    - Heavy Oil to Unicomp recipe can now be turned on and off from mod settings. On by default. You may want to disable this recipe when playing Space Age for balance reasons.
---------------------------------------------------------------------------------------------------
Version: 1.2.10
Date: 23. 3. 2025
  Updates:
    - pl locale added (Thanks S3BA-pl)
  Fixes:
    - Fixed crash related to Obninsk Reactor in 2.0.24 update 
---------------------------------------------------------------------------------------------------
Version: 1.2.9
Date: 22. 12. 2024
  Fixes:
    - Picking up YI-22/80 Buffer Chest now correctly gives you.. well the Buffer Chest.
    - Picking up Yuoki pipes, now give you the pipe you picked up not vanilla pipes...
    - Construction bots should now show correctly scaled alt icon when building, I think?
    - Productivity is now allowed for intermediate items again
    - Fixed up Atomics recipe icon issues
  Updates:
    - All Logistics Chests now support auto trashing.