@@ -93,30 +93,8 @@ local itemTable =
 -- Build out YI Logistics (JATMN)
 -- From Fixes Mod
 -- Group 1
-data.raw.recipe["y-inserter-fast"].subgroup = "j-y-logi-1"
-data.raw.recipe["y_inserter_smart"].subgroup = "j-y-logi-1"
-data.raw.recipe["y-inserter-smart-long"].subgroup = "j-y-logi-1"
-data.raw.recipe["y-inserter-s4"].subgroup = "j-y-logi-1"
-data.raw.recipe["y-inserter-fast"].order = "a"
-data.raw.recipe["y_inserter_smart"].order = "b"
-data.raw.recipe["y-inserter-smart-long"].order = "c"
-data.raw.recipe["y-inserter-s4"].order = "c"
 
 -- Group 2
-data.raw.recipe["y_inserter_smart_leftR2"].subgroup = "j-y-logi-2"
-data.raw.recipe["y_inserter_smart_rightR2"].subgroup = "j-y-logi-2"
-data.raw.recipe["y_inserter_smart_RR"].subgroup = "j-y-logi-2"
-data.raw.recipe["y_inserter_smart_LL"].subgroup = "j-y-logi-2"
-data.raw.recipe["y_inserter_diagonal"].subgroup = "j-y-logi-2"
-data.raw.recipe["y_inserter_evade_shortR"].subgroup = "j-y-logi-2"
-data.raw.recipe["y_inserter_evade_shortL"].subgroup = "j-y-logi-2"
-data.raw.recipe["y_inserter_smart_leftR2"].order = "a"
-data.raw.recipe["y_inserter_smart_rightR2"].order = "b"
-data.raw.recipe["y_inserter_smart_RR"].order = "c"
-data.raw.recipe["y_inserter_smart_LL"].order = "d"
-data.raw.recipe["y_inserter_diagonal"].order = "e"
-data.raw.recipe["y_inserter_evade_shortR"].order = "f"
-data.raw.recipe["y_inserter_evade_shortL"].order = "g"
 
 -- Group 3 (Not yet, these are from Engines Mod)
 --data.raw.recipe["ye_tranport_tube_orange_recipe"].subgroup = "j-y-logi-3"
