@@ -19,17 +19,16 @@ data:extend(
 			{type="item", name="y_rwtechsign", amount=1, },      	  						
 		},				
 		main_product="y-inserter-fast",		
-		subgroup = "y_line9",				
-		order = "ins-1",
+		subgroup = "j-y-logi-1",				
+		order = "a",
 	},	
 	{
 		type = "item",
 		name = "y-inserter-fast",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/y_smart_ins_icon.png",		
 		group = "yuoki",
-		--subgroup = "y-storage",	
-		subgroup = "y_line9",		
-		order = "c1",
+		subgroup = "j-y-logi-1",				
+		order = "a",
 		place_result = "y-inserter-fast",
 		stack_size = 50,
 	},
@@ -165,8 +164,8 @@ data:extend(
 			{type="item", name="y_rwtechsign", amount=1, },      	  						
 		},				
 		main_product="y-inserter-s4",				
-		order = "ins-2",
-		subgroup = "y-tools",
+		order = "c",
+		subgroup = "j-y-logi-1",
 	},
 
 	{
@@ -174,9 +173,8 @@ data:extend(
 		name = "y-inserter-s4",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/ins_red_icon.png",		
 		group = "yuoki",
-		--subgroup = "y-storage",	
-		subgroup = "y-tools",		
-		order = "c2",
+		subgroup = "j-y-logi-1",		
+		order = "c",
 		place_result = "y-inserter-s4",
 		stack_size = 50,
 	},
@@ -304,8 +302,8 @@ data:extend(
 		},
 		results = {{type="item", name="y-inserter-smart", amount=1},},
 		main_product = "y-inserter-smart",
-		--result = "y-inserter-smart",
-		order = "ins-3",
+		subgroup = "j-y-logi-1",
+		order = "b",
 	},
 
 	{
@@ -313,9 +311,8 @@ data:extend(
 		name = "y-inserter-smart",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/ins_cyan_icon.png",		
 		group = "yuoki",
-		--subgroup = "y-storage",	
-		subgroup = "y_line9",		
-		order = "c3",
+		subgroup = "j-y-logi-1",
+		order = "b",
 		place_result = "y-inserter-smart",
 		stack_size = 50,
 	},
@@ -447,8 +444,8 @@ data:extend(
 		},
 		results = {{type="item", name="y-inserter-smart-long", amount=1},},
 		main_product = "y-inserter-smart-long",
-		--result = "y-inserter-smart-long",
-		order = "ins-4",
+		subgroup = "j-y-logi-1",
+		order = "c",
 	},
 
 	{
@@ -456,9 +453,8 @@ data:extend(
 		name = "y-inserter-smart-long",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/inserter_long_smart.png",		
 		group = "yuoki",
-		--subgroup = "y-storage",	
-		subgroup = "y_line9",		
-		order = "c4",
+		subgroup = "j-y-logi-1",
+		order = "c",
 		place_result = "y-inserter-smart-long",
 		stack_size = 50,
 	},
@@ -592,8 +588,8 @@ data:extend(
 		},
 		results = {{type="item", name="y_inserter_smart_rightR2", amount=1},},
 		main_product = "y_inserter_smart_rightR2",
-		--result = "y_inserter_smart_rightR2",
-		order = "ins-5b",
+		subgroup = "j-y-logi-2",
+		order = "b",
 	},
 
 	{
@@ -601,9 +597,8 @@ data:extend(
 		name = "y_inserter_smart_rightR2",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/special_ins_rights_icon.png",		
 		group = "yuoki",
-		--subgroup = "y-storage",	
-		subgroup = "y_line9",		
-		order = "c5b",
+		subgroup = "j-y-logi-2",
+		order = "b",
 		place_result = "y_inserter_smart_rightR2",
 		stack_size = 50,
 	},
@@ -738,8 +733,8 @@ data:extend(
 		},
 		results = {{type="item", name="y_inserter_smart_leftR2", amount=1},},
 		main_product = "y_inserter_smart_leftR2",
-		--result = "y_inserter_smart_leftR2",
-		order = "ins-5a",
+		subgroup = "j-y-logi-2",
+		order = "a",
 	},
 
 	{
@@ -747,9 +742,8 @@ data:extend(
 		name = "y_inserter_smart_leftR2",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/special_ins_lefts_icon.png",		
 		group = "yuoki",
-		--subgroup = "y-storage",	
-		subgroup = "y_line9",		
-		order = "c5a",
+		subgroup = "j-y-logi-2",
+		order = "a",
 		place_result = "y_inserter_smart_leftR2",
 		stack_size = 50,
 	},
@@ -883,8 +877,8 @@ data:extend(
 		},
 		results = {{type="item", name="y_inserter_smart_RR", amount=1},},
 		main_product = "y_inserter_smart_RR",
-		--result = "y_inserter_smart_RR",
-		order = "ins-6a",
+		subgroup = "j-y-logi-2",
+		order = "c",
 	},
 
 	{
@@ -892,9 +886,8 @@ data:extend(
 		name = "y_inserter_smart_RR",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/special_ins_right_icon.png",		
 		group = "yuoki",
-		--subgroup = "y-storage",	
-		subgroup = "y_line9",		
-		order = "c6a",
+		subgroup = "j-y-logi-2",
+		order = "c",
 		place_result = "y_inserter_smart_RR",
 		stack_size = 50,
 	},
@@ -1029,8 +1022,8 @@ data:extend(
 		},
 		results = {{type="item", name="y_inserter_smart_LL", amount=1},},
 		main_product = "y_inserter_smart_LL",
-		--result = "y_inserter_smart_LL",
-		order = "ins-6b",
+		subgroup = "j-y-logi-2",
+		order = "d",
 	},
 
 	{
@@ -1038,8 +1031,8 @@ data:extend(
 		name = "y_inserter_smart_LL",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/special_ins_left_icon.png",		
 		group = "yuoki",		
-		subgroup = "y_line9",		
-		order = "c6b",
+		subgroup = "j-y-logi-2",
+		order = "d",
 		place_result = "y_inserter_smart_LL",
 		stack_size = 50,
 	},
