@@ -16,8 +16,8 @@ data:extend(
 			{type="item", name="y_rwtechsign", amount=1},      			
 		},
 		results = {{type="item", name="y_inserter_diagonal", amount=1},},
-		--result = "y_inserter_diagonal",
-		order = "ins-7a",
+		subgroup = "j-y-logi-2",
+		order = "e",
 	},
 
 	{
@@ -25,8 +25,8 @@ data:extend(
 		name = "y_inserter_diagonal",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/ins_diagonal.png",		
 		group = "yuoki",		
-		subgroup = "y_line9",		
-		order = "c7a",
+		subgroup = "j-y-logi-2",
+		order = "e",
 		place_result = "y_inserter_diagonal",
 		stack_size = 50,
 	},
@@ -135,17 +135,17 @@ data:extend(
 			{type="item", name="y_rwtechsign", amount=1},      			
 		},
 		results = {{type="item", name="y_inserter_evade_shortR", amount=1},},
-		--result = "y_inserter_evade_shortR",
-		order = "ins-8a",
+		subgroup = "j-y-logi-2",
+		order = "f",
 	},
 
 	{
 		type = "item",
 		name = "y_inserter_evade_shortR",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/ins_evade_right_icon.png",		
-		group = "yuoki",		
-		subgroup = "y_line9",		
-		order = "c8a",
+		group = "yuoki",
+		subgroup = "j-y-logi-2",
+		order = "f",
 		place_result = "y_inserter_evade_shortR",
 		stack_size = 50,
 	},
@@ -253,8 +253,8 @@ data:extend(
 			{type="item", name="y_rwtechsign", amount=1},      			
 		},
 		results = {{type="item", name="y_inserter_evade_shortL", amount=1},},
-		--result = "y_inserter_evade_shortL",
-		order = "ins-8b",
+		subgroup = "j-y-logi-2",
+		order = "g",
 	},
 
 	{
@@ -262,8 +262,8 @@ data:extend(
 		name = "y_inserter_evade_shortL",
 		icon_size = 64, icon =  "__Yuoki__/graphics/entity/inserters/ins_evade_left_icon.png",		
 		group = "yuoki",		
-		subgroup = "y_line9",		
-		order = "c8b",
+		subgroup = "j-y-logi-2",
+		order = "g",
 		place_result = "y_inserter_evade_shortL",
 		stack_size = 50,
 	},
